--- a/m_html/5_mod_memo.html
+++ b/m_html/5_mod_memo.html
@@ -45,7 +45,7 @@
     </section>
     <script>
         
-        const API_BASE_URL = 'http://localhost:5000';
+        const API_BASE_URL = 'http://3.34.42.154:5000';
 
          // 버튼 동작: 메인화면
          document.getElementById('header-title').addEventListener('click', () => {
