--- a/m_html/1_signup.html
+++ b/m_html/1_signup.html
@@ -10,7 +10,7 @@
     <section class="wrap">
         <h1 class="name">회원가입</h1>
         <article class="profile">
-            <form id="signup-form" method="POST" action="http://localhost:5000/signup">
+            <form id="signup-form" method="POST" action="http://3.34.42.154:5000/signup">
                 <!-- 프로필 사진 -->
                 <label class="profile-label" for="img">
                     <span id="profile-text" class="profile-text">프로필 사진을 추가해주세요.</span>
@@ -49,7 +49,7 @@
     </section>
 </body>
 <script>
-    const API_BASE_URL = 'http://localhost:5000';
+    const API_BASE_URL = 'http://3.34.42.154:localhost:5000';
     const signupForm = document.getElementById('signup-form');
 
     document.addEventListener("DOMContentLoaded", () => {
