--- a/m_html/4_look_memo.html
+++ b/m_html/4_look_memo.html
@@ -90,7 +90,7 @@
 
 
 
-        const API_BASE_URL = 'http://localhost:5000';
+        const API_BASE_URL = 'http://3.34.42.154:5000';
         // 내 정보 보기 버튼 클릭
         document.getElementById('mod_my_btn').addEventListener('click', () => {
                 window.location.href = '/7_my_info';
