--- a/m_html/1_signup.html
+++ b/m_html/1_signup.html
@@ -49,7 +49,7 @@
     </section>
 </body>
 <script>
-    const API_BASE_URL = 'http://3.34.42.154:localhost:5000';
+    const API_BASE_URL = 'http://3.34.42.154:5000';
     const signupForm = document.getElementById('signup-form');
 
     document.addEventListener("DOMContentLoaded", () => {
