--- a/m_html/3_memo_list.html
+++ b/m_html/3_memo_list.html
@@ -30,7 +30,8 @@
         </div>
     </section>
     <script>
-        const API_BASE_URL = "http://3.34.144.209:5000";
+        const API_BASE_URL = '/api';  
+        //const API_BASE_URL = 'http://3.34.144.209:5000';
         // 내 정보 보기 버튼 클릭
         document.getElementById('mod_my_btn').addEventListener('click', () => {
             window.location.href = '/7_my_info';
