--- a/m_html/2_login.html
+++ b/m_html/2_login.html
@@ -25,7 +25,8 @@
         <a class="button" href="1_signup.html">회원가입</a>
     </section>
     <script>
-        const API_BASE_URL = 'http://3.34.144.209:5000';
+        const API_BASE_URL = '/api';  
+        //const API_BASE_URL = 'http://3.34.144.209:5000';
         document.getElementById('login-btn').addEventListener('click', async (event) => {
             event.preventDefault();
 
