--- a/m_html/7_my_info.html
+++ b/m_html/7_my_info.html
@@ -44,8 +44,8 @@
         </div>
     </section>
     <script>
-        
-        const API_BASE_URL = 'http://3.34.144.209:5000';
+        const API_BASE_URL = '/api';  
+        //const API_BASE_URL = 'http://3.34.144.209:5000';
         document.addEventListener("DOMContentLoaded", loadUserInfo);
 
         // 버튼 동작: 메인화면
