--- a/m_html/8_mod_pw.html
+++ b/m_html/8_mod_pw.html
@@ -38,8 +38,9 @@
         </form>
     </section>
     <script>
-        
-        const API_BASE_URL = 'http://3.34.144.209:5000';
+        const API_BASE_URL = '/api';  
+
+        //const API_BASE_URL = 'http://3.34.144.209:5000';
         // 로그아웃 버튼 클릭
         document.getElementById('log_out_btn').addEventListener('click', async () => {
             try {
