--- a/m_html/6_add_memo.html
+++ b/m_html/6_add_memo.html
@@ -57,7 +57,7 @@
 
         async function loadUserInfo() {
             try {
-                const response = await fetch(`${API_BASE_URL}/api/check_session`, {
+                const response = await fetch(`${API_BASE_URL}/check_session`, {
                     credentials: 'include',
                 });
                 if (!response.ok) {
