--- a/m_html/3_memo_list.html
+++ b/m_html/3_memo_list.html
@@ -97,7 +97,7 @@
 
         async function fetchMemos(page = 1) {
             try {
-                const response = await fetch(`${API_BASE_URL}/api/memo_list?page=${page}`);
+                const response = await fetch(`${API_BASE_URL}/memo_list?page=${page}`);
                 if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
                 const memos = await response.json();
                 renderMemoList(memos);
@@ -119,7 +119,7 @@
 
         async function loadUserInfo() {
             try {
-                const response = await fetch(`${API_BASE_URL}/api/check_session`, {
+                const response = await fetch(`${API_BASE_URL}/check_session`, {
                     credentials: 'include',
                 });
                 if (!response.ok) {
