--- a/m_html/1_signup.html
+++ b/m_html/1_signup.html
@@ -10,7 +10,7 @@
     <section class="wrap">
         <h1 class="name">회원가입</h1>
         <article class="profile">
-            <form id="signup-form" method="POST" action="/signup">
+            <form id="signup-form" method="POST" action="http://3.34.144.209:5000/api/signup">
                 <!-- 프로필 사진 -->
                 <label class="profile-label" for="img">
                     <span id="profile-text" class="profile-text">프로필 사진을 추가해주세요.</span>
