--- a/m_html/2_login.html
+++ b/m_html/2_login.html
@@ -9,7 +9,7 @@
 <body>
     <section class="wrap">
         <h1 class="name">로그인</h1>
-        <form id="login-form" method="POST" action="/login" onsubmit="return false;">
+        <form id="login-form" method="POST" action="http://3.34.144.209:5000/api/login" onsubmit="return false;">
             <article class="profile">
                 <p class="description">이메일</p>
                 <input type="email" id="email" name="email" placeholder="이메일을 입력하세요" required>
