--- a/m_html/1_signup.html
+++ b/m_html/1_signup.html
@@ -49,8 +49,8 @@
     </section>
 </body>
 <script>
-    const API_BASE_URL = '/api';  
-    //const API_BASE_URL = 'http://3.34.144.209:5000';
+    //const API_BASE_URL = '/api';  
+    const API_BASE_URL = 'http://3.34.144.209:5000/api';
     const signupForm = document.getElementById('signup-form');
 
     document.addEventListener("DOMContentLoaded", () => {
