--- a/m_html/6_add_memo.html
+++ b/m_html/6_add_memo.html
@@ -40,7 +40,7 @@
     <script>
 
         //const API_BASE_URL = '/api';  
-        API_BASE_URL = 'http://3.34.144.209:5000';
+        API_BASE_URL = 'http://3.34.144.209:5000/api';
         // 버튼 동작: 메인화면
         document.getElementById('header-title').addEventListener('click', () => {
             window.location.href = '/3_memo_list.html';
