--- a/m_html/2_login.html
+++ b/m_html/2_login.html
@@ -26,7 +26,7 @@
     </section>
     <script>
         //const API_BASE_URL = '/api';  
-        const API_BASE_URL = 'http://3.34.144.209:5000';
+        const API_BASE_URL = 'http://3.34.144.209:5000/api';
         document.getElementById('login-btn').addEventListener('click', async (event) => {
             event.preventDefault();
 
