--- a/m_html/7_my_info.html
+++ b/m_html/7_my_info.html
@@ -45,7 +45,7 @@
     </section>
     <script>
         //const API_BASE_URL = '/api';  
-        const API_BASE_URL = 'http://3.34.144.209:5000';
+        const API_BASE_URL = 'http://3.34.144.209:5000/api';
         document.addEventListener("DOMContentLoaded", loadUserInfo);
 
         // 버튼 동작: 메인화면
