--- a/m_html/8_mod_pw.html
+++ b/m_html/8_mod_pw.html
@@ -40,7 +40,7 @@
     <script>
         //const API_BASE_URL = '/api';  
 
-        const API_BASE_URL = 'http://3.34.144.209:5000';
+        const API_BASE_URL = 'http://3.34.144.209:5000/api';
         // 로그아웃 버튼 클릭
         document.getElementById('log_out_btn').addEventListener('click', async () => {
             try {
