--- a/m_html/3_memo_list.html
+++ b/m_html/3_memo_list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="wrap">
-        <h1 class="name">아무 말 대잔치</h1>
+        <h1 class="name">Yeoni's 커뮤니티</h1>
         <hr class="horizontal-rule"/>
         <h1 class="page_title">게시글 보기</h1>
         <div class="dropdown">
