--- a/m_html/7_my_info.html
+++ b/m_html/7_my_info.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="wrap">
-        <h1 class="name" id="header-title">아무 말 대잔치</h1>
+        <h1 class="name" id="header-title">Yeoni's 커뮤니티</h1>
         <hr class="horizontal-rule"/>
         <h1 class="page_title">내 정보 보기</h1>
         <div class="dropdown">
